[package]
name = "ionex"
version = "0.1.0"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "IONEX (Ionosphere Maps) parser"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/ionex"
keywords = ["geo", "gnss", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
# serde by default
# gzip files supported by default
default = ["serde", "flate2"] 

serde = [
    "dep:serde",
    "gnss-rs/serde",
    "hifitime/serde",
]

[dependencies.gnss-rs]
git = "https://github.com/nav-solutions/gnss"
rev = "dc4d4c2d413a3be90a3fa08a6ab29079eec13923"
features = ["std", "domes", "cospar", "sbas"]

[dependencies.hifitime]
version = "4.1"
features = ["std"]

[dependencies]
geo = "0.31"
thiserror = "2"
itertools = "0.14"
log = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
log = "0.4"
criterion = "0.7"
env_logger = "0.11"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "formatting"
harness = false

